Sometimes I will learn how to commit not all files in one commit, but not now

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-	font-size: 14px;
+	font-size: 12px;
 	font-family: 'Liberation Mono';
 }
 
@@ -9,33 +9,13 @@ window#waybar {
 	color: #fdf6e3;
 }
 
-#custom-right-arrow-dark,
-#custom-left-arrow-dark {
-	color: #1a1a1a;
-}
-#custom-right-arrow-light,
-#custom-left-arrow-light {
-	color: #292b2e;
-	background: #1a1a1a;
-}
-
 #workspaces,
-#clock.1,
-#clock.2,
-#clock.3,
+#clock,
 #pulseaudio,
-#memory,
-#cpu,
 #battery,
-#disk,
+#custom-space,
 #tray {
 	background: #1a1a1a;
-}
-
-#window {
-	background-color: #1a1a1a;
-	padding: 0 10px;
-	font-size: 14px;
 }
 
 #workspaces button {
@@ -58,24 +38,12 @@ window#waybar {
 #pulseaudio {
 	color: #268bd2;
 }
-#memory {
-	color: #2aa198;
-}
-#cpu {
-	color: #6c71c4;
-}
 #battery {
 	color: #859900;
-}
-#disk {
-	color: #b58900;
 }
 
 #clock,
 #pulseaudio,
-#memory,
-#cpu,
-#battery,
-#disk {
-	padding: 0 10px;
+#battery {
+	padding: 0 2px;
 }
