--- a/.config/latte/My Layout.layout.latte
+++ b/.config/latte/My Layout.layout.latte
@@ -18,7 +18,7 @@ raiseOnDesktopChange=false
 settingsComplexity=4
 timerHide=700
 timerShow=200
-viewType=0
+viewType=1
 visibility=0
 wallpaperplugin=org.kde.image
 
@@ -27,7 +27,7 @@ immutability=1
 plugin=org.kde.latte.plasmoid
 
 [Containments][1][Applets][2][Configuration]
-PreloadWeight=34
+PreloadWeight=10
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
@@ -38,27 +38,29 @@ immutability=1
 plugin=org.kde.plasma.analogclock
 
 [Containments][1][Applets][3][Configuration]
-PreloadWeight=34
+PreloadWeight=10
 
 [Containments][1][Applets][3][Configuration][ConfigDialog]
 DialogHeight=480
 DialogWidth=640
 
 [Containments][1][ConfigDialog]
-DialogHeight=1018
-DialogWidth=450
+DialogHeight=1017
+DialogWidth=539
 
 [Containments][1][Configuration]
-PreloadWeight=34
+PreloadWeight=10
 
 [Containments][1][General]
 advanced=false
 animationLauncherBouncing=false
 animationWindowAddedInGroup=false
+animationWindowInAttention=false
 appletOrder=2;3
 dragActiveWindowEnabled=true
 hoverAction=PreviewAndHighlightWindows
 iconSize=32
+inConfigureAppletsMode=true
 launchersGroup=Global
 lengthExtMargin=5
 mouseWheelActions=false
@@ -77,7 +79,6 @@ solidBackgroundForMaximized=true
 splitterPosition=1
 splitterPosition2=2
 themeColors=SmartThemeColors
-titleTooltips=false
 zoomLevel=0
 
 [Containments][1][Indicator]
